fixed spacing at bottom of screen

--- a/onlyfin-frontend/src/style/Welcome.css
+++ b/onlyfin-frontend/src/style/Welcome.css
@@ -283,7 +283,7 @@ Welcome
     justify-content: space-between;
     margin-top: 250px;
     gap: 200px;
-    padding-bottom: 350px;
+    padding-bottom: 250px;
 }
 
 .welcome-section-five-content-right > h2 {
